fixed tab wrapping

--- a/testing/static/other.css
+++ b/testing/static/other.css
@@ -50,7 +50,9 @@ tr:nth-child(even) {
 }
    
      
-
+.ds {
+  line-height: 2;
+}
     
     .current {color: Black}
     
@@ -66,7 +68,7 @@ tr:nth-child(even) {
     
 
 .button1 {
-  font-family: 'Old Standard TT', serif;
+  font-family: serif;
   text-decoration: none;
   border: 1px solid black;
   background-color: #eee;
@@ -75,13 +77,13 @@ tr:nth-child(even) {
   color: #4b2e83;
 
 }
-    /*
+
 .button1:hover {
     color: Black;
     background-color: Gainsboro;
     text-decoration: none;
 }
-*/
+
 
 .hiddendiv{
     display:none;
